--- a/index.html
+++ b/index.html
@@ -13,6 +13,63 @@
             overflow: hidden;
         }
 
+        /* 粒子效果容器 - 这个SB样式给粒子系统用的 */
+        .particle-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 1;
+        }
+
+        /* 粒子效果样式 */
+        .particle {
+            position: absolute;
+            border-radius: 50%;
+            pointer-events: none;
+            animation: particleFloat 3s ease-in-out infinite;
+        }
+
+        @keyframes particleFloat {
+            0%, 100% {
+                transform: translateY(0px) rotate(0deg);
+                opacity: 0;
+            }
+            10% {
+                opacity: 1;
+            }
+            90% {
+                opacity: 1;
+            }
+            50% {
+                transform: translateY(-20px) rotate(180deg);
+            }
+        }
+
+        /* 魔法粒子特效 */
+        .magic-particle {
+            width: 4px;
+            height: 4px;
+            background: radial-gradient(circle, #FFD700 0%, #FFA500 100%);
+            box-shadow: 0 0 10px #FFD700;
+        }
+
+        .spark-particle {
+            width: 2px;
+            height: 2px;
+            background: #00FF7F;
+            box-shadow: 0 0 6px #00FF7F;
+        }
+
+        .glow-particle {
+            width: 6px;
+            height: 6px;
+            background: radial-gradient(circle, #9370DB 0%, #8A2BE2 100%);
+            box-shadow: 0 0 15px #9370DB;
+        }
+
         #game-container {
             width: 100vw;
             height: 100vh;
@@ -73,6 +130,9 @@
 </head>
 <body>
     <div id="game-container">
+        <!-- 粒子效果容器 - 这个SB容器给魔法粒子用的 -->
+        <div id="particles" class="particle-container"></div>
+
         <div class="loading-screen" id="loading-screen">
             <h1 class="loading-title">魔药酒馆</h1>
             <div class="loading-bar">
