feat(assets): 添加音频、图标、背景等游戏资源占位 SVG 文件
新增大量游戏资源的占位 SVG 文件，包括：
- 背景音乐与音效文件对应的可视化占位图
- 游戏内图标（攻击、防御、经验等）
- 界面背景图（战斗、制作、商店等）
- 素材与粒子效果图
- 卡牌、NPC 和敌人相关图像

同时更新 .claude/settings.local.json 权限配置，
添加 Chrome DevTools 相关权限以便调试支持。

新增项目规范文档 .qoder/rules/roule.md，
定义仓库结构、编码风格、测试指南及提交规范。

--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
     <script src="js/ui/CustomerUI.js"></script>
     <script src="js/ui/BattleUI.js"></script>
 
+    <!-- 老王错误管理器 -->
+    <script src="js/utils/ErrorManager.js"></script>
+
     <!-- 游戏主文件 -->
     <script src="js/main.js"></script>
 
