--- a/potions.html
+++ b/potions.html
@@ -656,6 +656,7 @@
         </div>
     </footer>
     
+    <script src="js/utils/ErrorManager.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
