--- a/gameplay.html
+++ b/gameplay.html
@@ -465,6 +465,7 @@
         </div>
     </footer>
     
+    <script src="js/utils/ErrorManager.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
