本项目终结

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
     <script src="js/utils/EventManager.js"></script>
 
     <!-- 数据定义 -->
+    <script src="js/data/AssetManifest.js"></script>
     <script src="js/data/PotionRecipes.js"></script>
     <script src="js/data/CardDefinitions.js"></script>
     <script src="js/data/CustomerTypes.js"></script>
